--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg" style="background-color: #0E2E45;">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0E2E45;">
   <div class="container-fluid">
     <a class="navbar-brand text-white" href={{path('acceuil_index')}}>Le Monde du Rail</a>
 
