--- a/public/CSS/ProduitWF.css
+++ b/public/CSS/ProduitWF.css
@@ -173,10 +173,6 @@ width: 50%;
 #WagonFretBacheTailleGVue2{
 width: 100%;
 }
-#WagonFretBacheTailleZVue1,
-#WagonFretBacheTailleZVue2{
-width: 100%;
-}
 #WagonFretBacheTailleHOVue1,
 #WagonFretBacheTailleHOVue2{
 width: 100%;
@@ -202,22 +198,10 @@ width: 100%;
 #WagonFretCouvertTailleHOVue2{
 width: 100%;
 }
-/*
-#LocoCouvertTailleNVue1,
-#LocoCouvertTailleNVue2,
-#LocoCouvertTailleNVue3{
-width: 100%;
-}
-#LocoCouvertTailleZVue1,
-#LocoCouvertTailleZVue2,
-#LocoCouvertTailleZVue3{
-width: 100%;
-} */
 
 
 main{
 width: 50%;
-/* margin: auto; */
 position: relative;
 }
 
@@ -285,4 +269,287 @@ content: "<";
 left: 20px;
 }
 
+}
+/* === Responsive pour les pages produits Wagons de Fret === */
+
+/* Smartphones Portrait (max-width: 600px) */
+@media (max-width: 600px) {
+    main {
+        width: 95%;
+        margin: auto;
+    }
+
+    .titre {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .titre a {
+        padding: 0;
+        margin-bottom: 10px;
+    }
+
+    .droiteGBache,
+    .droiteNBache,
+    .droiteZBache,
+    .droiteHOBache,
+    .droiteGRebord,
+    .droiteNRebord,
+    .droiteZRebord,
+    .droiteHORebord,
+    .droiteGCouvert,
+    .droiteNCouvert,
+    .droiteZCouvert,
+    .droiteHOCouvert {
+        padding-left: 0;
+        font-size: 18px;
+        margin-top: 20px;
+    }
+
+    .descriptionGBache,
+    .descriptionNBache,
+    .descriptionZBache,
+    .descriptionHOBache,
+    .descriptionGRebord,
+    .descriptionNRebord,
+    .descriptionZRebord,
+    .descriptionHORebord,
+    .descriptionGCouvert,
+    .descriptionNCouvert,
+    .descriptionZCouvert,
+    .descriptionHOCouvert {
+        width: 95%;
+        height: auto;
+        margin: 30px auto;
+        padding-left: 10px;
+        padding-top: 5px;
+    }
+
+    .descriptionGBache p,
+    .descriptionNBache p,
+    .descriptionZBache p,
+    .descriptionHOBache p,
+    .descriptionGRebord p,
+    .descriptionNRebord p,
+    .descriptionZRebord p,
+    .descriptionHORebord p,
+    .descriptionGCouvert p,
+    .descriptionNCouvert p,
+    .descriptionZCouvert p,
+    .descriptionHOCouvert p {
+        font-size: 16px;
+    }
+
+    /* Images Wagons */
+    #WagonFretBacheTailleNVue1,
+    #WagonFretBacheTailleGVue1,
+    #WagonFretBacheTailleGVue2,
+    #WagonFretBacheTailleZVue1,
+    #WagonFretBacheTailleZVue2,
+    #WagonFretBacheTailleHOVue1,
+    #WagonFretBacheTailleHOVue2,
+    #WagonFretRebordTailleGVue1,
+    #WagonFretRebordTailleNVue1,
+    #WagonFretRebordTailleNVue2,
+    #WagonFretRebordTailleNVue3,
+    #WagonFretRebordTailleHOVue1,
+    #WagonFretRebordTailleHOVue2,
+    #WagonFretCouvertTailleNVue1,
+    #WagonFretCouvertTailleNVue2,
+    #WagonFretCouvertTailleNVue3,
+    #WagonFretCouvertTailleZVue1,
+    #WagonFretCouvertTailleZVue2,
+    #WagonFretCouvertTailleZVue3,
+    #WagonFretRebordTailleZVue1,
+    #WagonFretRebordTailleZVue2,
+    #WagonFretRebordTailleZVue3,
+    #WagonFretCouvertTailleGVue1,
+    #WagonFretCouvertTailleGVue2,
+    #WagonFretCouvertTailleGVue3,
+    #WagonFretCouvertTailleHOVue1,
+    #WagonFretCouvertTailleHOVue2 {
+        width: 80%;
+    }
+}
+
+/* Tablettes / petits écrans (601px - 992px) */
+@media (min-width: 601px) and (max-width: 992px) {
+    main {
+        width: 90%;
+        margin: auto;
+    }
+
+    .droiteGBache,
+    .droiteNBache,
+    .droiteZBache,
+    .droiteHOBache,
+    .droiteGRebord,
+    .droiteNRebord,
+    .droiteZRebord,
+    .droiteHORebord,
+    .droiteGCouvert,
+    .droiteNCouvert,
+    .droiteZCouvert,
+    .droiteHOCouvert {
+        padding-left: 20%;
+        font-size: 20px;
+        margin-top: 30px;
+    }
+
+    .descriptionGBache,
+    .descriptionNBache,
+    .descriptionZBache,
+    .descriptionHOBache,
+    .descriptionGRebord,
+    .descriptionNRebord,
+    .descriptionZRebord,
+    .descriptionHORebord,
+    .descriptionGCouvert,
+    .descriptionNCouvert,
+    .descriptionZCouvert,
+    .descriptionHOCouvert {
+        width: 95%;
+        padding-left: 10px;
+        padding-top: 8px;
+        margin: 40px auto;
+        box-sizing: border-box;
+        height: auto;
+    }
+
+    .descriptionGBache p,
+    .descriptionNBache p,
+    .descriptionZBache p,
+    .descriptionHOBache p,
+    .descriptionGRebord p,
+    .descriptionNRebord p,
+    .descriptionZRebord p,
+    .descriptionHORebord p,
+    .descriptionGCouvert p,
+    .descriptionNCouvert p,
+    .descriptionZCouvert p,
+    .descriptionHOCouvert p {
+        font-size: 18px;
+        word-wrap: break-word;
+    }
+
+    #WagonFretBacheTailleNVue1,
+    #WagonFretBacheTailleGVue1,
+    #WagonFretBacheTailleGVue2,
+    #WagonFretBacheTailleZVue1,
+    #WagonFretBacheTailleZVue2,
+    #WagonFretBacheTailleHOVue1,
+    #WagonFretBacheTailleHOVue2,
+    #WagonFretRebordTailleGVue1,
+    #WagonFretRebordTailleNVue1,
+    #WagonFretRebordTailleNVue2,
+    #WagonFretRebordTailleNVue3,
+    #WagonFretRebordTailleZVue1,
+    #WagonFretRebordTailleZVue2,
+    #WagonFretRebordTailleZVue3,
+    #WagonFretRebordTailleHOVue1,
+    #WagonFretRebordTailleHOVue2,
+    #WagonFretCouvertTailleZVue1,
+    #WagonFretCouvertTailleZVue2,
+    #WagonFretCouvertTailleZVue3,
+    #WagonFretCouvertTailleNVue1,
+    #WagonFretCouvertTailleNVue2,
+    #WagonFretCouvertTailleNVue3,
+    #WagonFretCouvertTailleGVue1,
+    #WagonFretCouvertTailleGVue2,
+    #WagonFretCouvertTailleGVue3,
+    #WagonFretCouvertTailleHOVue1,
+    #WagonFretCouvertTailleHOVue2 {
+        width: 60%;
+    }
+}
+
+/* Grands écrans (993px - 1300px) */
+@media (min-width: 993px) and (max-width: 1300px) {
+    main {
+        width: 80%;
+        margin: auto;
+    }
+
+    .droiteGBache,
+    .droiteNBache,
+    .droiteZBache,
+    .droiteHOBache,
+    .droiteGRebord,
+    .droiteNRebord,
+    .droiteZRebord,
+    .droiteHORebord,
+    .droiteGCouvert,
+    .droiteNCouvert,
+    .droiteZCouvert,
+    .droiteHOCouvert {
+        padding-left: 30%;
+        font-size: 22px;
+        margin-bottom: 30px;
+    }
+
+    .descriptionGBache,
+    .descriptionNBache,
+    .descriptionZBache,
+    .descriptionHOBache,
+    .descriptionGRebord,
+    .descriptionNRebord,
+    .descriptionZRebord,
+    .descriptionHORebord,
+    .descriptionGCouvert,
+    .descriptionNCouvert,
+    .descriptionZCouvert,
+    .descriptionHOCouvert {
+        width: 90%;
+        padding-left: 15px;
+        padding-top: 10px;
+        margin: 50px auto;
+        box-sizing: border-box;
+        height: auto;
+    }
+
+    .descriptionGBache p,
+    .descriptionNBache p,
+    .descriptionZBache p,
+    .descriptionHOBache p,
+    .descriptionGRebord p,
+    .descriptionNRebord p,
+    .descriptionZRebord p,
+    .descriptionHORebord p,
+    .descriptionGCouvert p,
+    .descriptionNCouvert p,
+    .descriptionZCouvert p,
+    .descriptionHOCouvert p {
+        font-size: 20px;
+        word-wrap: break-word;
+    }
+
+    #WagonFretBacheTailleNVue1,
+    #WagonFretBacheTailleGVue1,
+    #WagonFretBacheTailleGVue2,
+    #WagonFretBacheTailleZVue1,
+    #WagonFretBacheTailleZVue2,
+    #WagonFretBacheTailleHOvue1,
+    #WagonFretBacheTailleHOVue2,
+    #WagonFretRebordTailleGVue1,
+    #WagonFretRebordTailleNVue1,
+    #WagonFretRebordTailleNVue2,
+    #WagonFretRebordTailleNVue3,
+    #WagonFretRebordTailleZVue1,
+    #WagonFretRebordTailleZVue2,
+    #WagonFretRebordTailleZVue3,
+    #WagonFretRebordTailleHOVue1,
+    #WagonFretRebordTailleHOVue2,
+    #WagonFretCouvertTailleZVue1,
+    #WagonFretCouvertTailleZVue2,
+    #WagonFretCouvertTailleZVue3,
+    #WagonFretCouvertTailleNVue1,
+    #WagonFretCouvertTailleNVue2,
+    #WagonFretCouvertTailleNVue3,
+    #WagonFretCouvertTailleGVue1,
+    #WagonFretCouvertTailleGVue2,
+    #WagonFretCouvertTailleGVue3,
+    #WagonFretCouvertTailleHOVue1,
+    #WagonFretCouvertTailleHOVue2 {
+        width: 50%;
+    }
 }
